[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI_script/GameOverScreen.gd" type="Script" id=1]
[ext_resource path="res://Sprites/GameOver UI/returnButton-01.png" type="Texture" id=2]
[ext_resource path="res://Sprites/GameOver UI/gameover_text-01.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Background.png" type="Texture" id=4]
[ext_resource path="res://Font/Pirate Kids.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Sprites/GameOver UI/gameover screen-01-01.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 84
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Dashboard:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 256, -0.25, 0, 0.25, 0, 256, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Dashboard:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -104, -0.25, 0, 0.25, 0, 164, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("GameOverText:self_modulate:r")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("GameOverText:self_modulate:g")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("GameOverText:self_modulate:b")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("GameOverText:self_modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}

[node name="GameOverScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 256, 144 )
scale = Vector2( 1, 0.5625 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="GameOverText" type="Sprite" parent="."]
position = Vector2( 264, 32 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Dashboard" type="Sprite" parent="."]
visible = false
position = Vector2( 256, 164 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="ReturnButton" type="TextureButton" parent="Dashboard"]
anchor_left = -0.201258
anchor_top = 0.113341
anchor_right = -0.183288
anchor_bottom = 0.136954
margin_left = -128.0
margin_top = 80.0
margin_right = 96.0
margin_bottom = 304.0
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Score" type="Label" parent="Dashboard"]
margin_left = -384.0
margin_top = -96.0
margin_right = 66.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.647059, 0.356863, 0.0627451, 1 )
text = "0x"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreTitle" type="Label" parent="Dashboard"]
margin_left = -256.0
margin_top = 48.0
margin_right = 194.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.647059, 0.356863, 0.0627451, 1 )
text = "HIGHSCORE:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="Dashboard"]
visible = false
margin_left = -256.0
margin_top = 144.0
margin_right = 194.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.647059, 0.356863, 0.0627451, 1 )
text = "0x"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grade" type="Label" parent="Dashboard"]
margin_left = 288.0
margin_top = 80.0
margin_right = 328.0
margin_bottom = 176.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.08
autostart = true
[connection signal="pressed" from="Dashboard/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
